--- a/_posts/2025-03-01-hci.md
+++ b/_posts/2025-03-01-hci.md
@@ -1,7 +1,7 @@
 ---
 title: CS374 Introduction to HCI
-semester: 2024 Spring
-website: https://cstl-kaist.github.io/cs374-2024-spring/
+semester: 2025 Spring
+website: https://hci.cstlab.org/
 ---
 
 This course introduces fundamental principles, techniques, and methods for designing, prototyping, and evaluating user interfaces.
